# agentcanvas

./: .agentcanvasignore  .gitignore  LICENSE  README.md  pyproject.toml  wrangler.agentcanvas.jsonc  wrangler.jsonc
.github/workflows/: deploy-agentcanvas.yml
agentcanvas/: cli.py  demo.py  indexer.py  ir.py  server.py
agentcanvas/core/: __init__.py  app_surface.py  behavior_canvas.py  mapper.py  model.py  workspace_profile.py
agentcanvas/demo_project/: README.md  package.json
agentcanvas/languages/: __init__.py  dart_lang.py  go_lang.py  js_ts.py  kotlin_lang.py  lightweight.py  php_lang.py  python_lang.py  ruby_lang.py  swift_lang.py
agentcanvas/projection/: __init__.py  contracts.py  heuristic.py  sample.py  validation.py
agentcanvas/web/: app.js  index.html  llms.txt  site.webmanifest  styles.css
docs/: adapters.md  demo-mode.md  language-support.md  product-contract-audit.md  projection.md  publishing.md
frontend/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
scripts/: smoke_mvp.py  smoke_runtime.py  verify_release.py
tests/: test_agentcanvas_behavior_regression.py  test_app_surface_detection.py  test_behavior_canvas_api.py  test_canvas_quality.py  test_cli_contract.py  test_core_model.py  test_core_monorepo.py  test_go_php_ruby_languages.py  test_indexer_ignore.py  test_js_ts_language.py  test_mobile_native_languages.py  test_projection_contract.py  test_python_lang.py  test_release_verifier.py  test_server_context.py  test_smoke.py  test_smoke_runtime.py
(+119 files in other folders)
