[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-canvas"
version = "0.1.0"
description = "Local editable workflow canvas for AI coding agents."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "AgentCanvas contributors" }]
keywords = ["ai-agents", "workflow", "canvas", "developer-tools"]
dependencies = []

[project.scripts]
agentcanvas = "agentcanvas.cli:main"

[tool.setuptools.packages.find]
include = ["agentcanvas*"]

[tool.setuptools.package-data]
agentcanvas = [
  "web/*",
  "web/assets/*",
  "demo_project/*",
  "demo_project/src/*",
  "demo_project/src/actions/*",
  "demo_project/src/jobs/*",
  "demo_project/src/routes/*",
  "demo_project/src/services/*",
  "demo_project/tests/*",
]
